# jarvis-agent

./: .gitignore  MYSQL_KNOWLEDGE_BASE_INTEGRATION.md  README.md
app/: main.py  pyproject.toml
app/api/: chat.py  chat_history.py  file.py
app/core/: config.py
app/db/: base.py  session.py
app/model/: chat.py  document.py
app/schema/: request.py
app/services/: ai_chat_service.py  chat_history_service.py  document_record_service.py  document_split_service.py  ocr_service.py  rerank_service.py  vector_index_service.py  vector_store_manager.py
app/services/feishu/: feishu_bot.py
app/tools/: __init__.py  knowledge_tool.py
app/utils/: __init__.py  ingestion_pipeline.py
frontend/: chat.html
