[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncmy>=0.2.11",
    "fastapi>=0.136.3",
    "jieba>=0.42.1",
    "langchain>=1.3.9",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.3.0",
    "langchain-qdrant>=1.1.0",
    "langchain-text-splitters>=1.1.2",
    "langgraph-checkpoint-redis>=0.4.1",
    "loguru>=0.7.3",
    "pydantic-settings>=2.14.1",
    "pymysql>=1.2.0",
    "pypdf>=6.14.2",
    "python-docx>=1.1.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "qdrant-client>=1.18.0",
    "rank-bm25>=0.2.2",
    "redis>=7.4.1",
    "sqlalchemy>=2.0.50",
    "tiktoken>=0.13.0",
    "uvicorn[standard]>=0.49.0",
]
